force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Last_Payment_Date__c</fullName>
    <description>Ngày thanh toán gần nhất</description>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>