force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Last_PIN_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Last_PIN_Action_Date__c</fullName>
    <description>Ngày khóa/ mở khóa PIN</description>
    <label>Last PIN Action Date</label>
    <type>Date</type>
</CustomField>