force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Last_PIN_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Last_PIN_Status__c</fullName>
    <description>Trạng tình PIN</description>
    <label>Last PIN Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>