force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Last_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Last_Transaction_Amount__c</fullName>
    <description>Giao dịch thành công gần nhất</description>
    <label>Last Transaction Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>