force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Loan_Amount__c</fullName>
    <description>Số tiền vay</description>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>