force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Local_Use__c.field-meta.xml
<CustomField>
    <fullName>FEC_Local_Use__c</fullName>
    <description>Tính năng thanh toán quốc tế</description>
    <label>Local Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Block_1_NotBlock_0</valueSetName>
    </valueSet>
</CustomField>