force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_LPI_Paid__c.field-meta.xml
<CustomField>
    <fullName>FEC_LPI_Paid__c</fullName>
    <description>Lãi quá hạn đã thanh toán</description>
    <label>LPI Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>