force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>FEC_Mailing_Address__c</fullName>
    <description>Địa chỉ giao phát</description>
    <label>Mailing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>