force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Marital_Status__c</fullName>
    <description>Tình trạng hôn nhân</description>
    <inlineHelpText>tình trạng hôn nhân</inlineHelpText>
    <label>Marital Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>