force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Memorable_Question__c.field-meta.xml
<CustomField>
    <fullName>FEC_Memorable_Question__c</fullName>
    <description>Câu hỏi bảo mật</description>
    <label>Memorable Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>