force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Middle_Name__c</fullName>
    <description>Tên đệm</description>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>