force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Mobile_App_Account__c.field-meta.xml
<CustomField>
    <fullName>FEC_Mobile_App_Account__c</fullName>
    <description>Tài khoản trên ứng dụng FEC</description>
    <inlineHelpText>Tài khoản trên ứng dụng FEC</inlineHelpText>
    <label>Mobile App Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_NA</valueSetName>
    </valueSet>
</CustomField>