force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Modified_Date__c</fullName>
    <label>Modified Date</label>
    <type>Date</type>
</CustomField>