force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_MRC_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_MRC_Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>