force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_MRC_Zone__c.field-meta.xml
<CustomField>
    <fullName>FEC_MRC_Zone__c</fullName>
    <label>MRC Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>