force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_National_ID_Passport_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_National_ID_Passport_ID__c</fullName>
    <description>Căn cước/ Hộ chiếu</description>
    <inlineHelpText>CCCD/CMND của khách hàng</inlineHelpText>
    <label>National ID/ Passport ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>