force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Next_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Next_Due_Date__c</fullName>
    <description>Ngày thanh toán kế tiếp</description>
    <label>Next Due Date</label>
    <type>Date</type>
</CustomField>