force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Next_Statement_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Next_Statement_Date__c</fullName>
    <description>Ngày sao kê kế tiếp</description>
    <label>Next Statement Date</label>
    <type>Date</type>
</CustomField>