force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_NFU_Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_NFU_Expired_Date__c</fullName>
    <description>Thời điểm kết thúc</description>
    <label>NFU Expired Date</label>
    <type>DateTime</type>
</CustomField>