force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_NFU_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_NFU_Reason__c</fullName>
    <description>Lý do ngưng nhắc nợ</description>
    <label>NFU Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>