force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_NFU_Started_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_NFU_Started_Date__c</fullName>
    <description>Thời điểm bắt đầu</description>
    <label>NFU Started Date</label>
    <type>DateTime</type>
</CustomField>