force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Notarized_MRC_Receiver__c.field-meta.xml
<CustomField>
    <fullName>FEC_Notarized_MRC_Receiver__c</fullName>
    <label>Receiver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>