force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Notarized_MRC_Remark__c.field-meta.xml
<CustomField>
    <fullName>FEC_Notarized_MRC_Remark__c</fullName>
    <label>Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>