force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_One_Time_Cash_Limit__c.field-meta.xml
<CustomField>
    <fullName>FEC_One_Time_Cash_Limit__c</fullName>
    <description>Hạn mức rút tiền mặt/lần</description>
    <label>One-Time Cash Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>