force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_One_Time_Ecommerce_Limit__c.field-meta.xml
<CustomField>
    <fullName>FEC_One_Time_Ecommerce_Limit__c</fullName>
    <description>Hạn mức GD trực tuyến/lần</description>
    <label>One-Time E-commerce Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>