force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Outstanding_Amount__c</fullName>
    <label>Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>