force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Overdue_Penalty__c.field-meta.xml
<CustomField>
    <fullName>FEC_Overdue_Penalty__c</fullName>
    <description>Phạt quá hạn</description>
    <label>Overdue Penalty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>