force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Payment_ID__c</fullName>
    <description>Mã thanh toán</description>
    <label>Payment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>