force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Penalty_Fee_Overdue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Penalty_Fee_Overdue__c</fullName>
    <description>Phí phạt quá hạn</description>
    <label>Penalty Fee Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>