force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Pending_Penal_Interest__c.field-meta.xml
<CustomField>
    <fullName>FEC_Pending_Penal_Interest__c</fullName>
    <description>Tiền lãi quá hạn</description>
    <label>Pending Penal Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>