force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_PID_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_PID_Number__c</fullName>
    <description>Số PID</description>
    <label>PID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>