force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Place_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Place_of_Issue__c</fullName>
    <description>Nơi cấp</description>
    <label>Place of Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>