force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Plan_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Plan_Payment_Amount__c</fullName>
    <description>Số tiền tất toán
Formula = Current Balance + Accrued Interest + Per Diem + Deferred Interest + IPP Accrued Interest + Close Fee Amount của plan</description>
    <label>Plan Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>