force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Plastic_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Plastic_ID__c</fullName>
    <description>Plastic ID</description>
    <label>Plastic ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>