force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Plate_Number__c</fullName>
    <label>Plate Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>