force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>