force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Pre_Payment_Penalty__c.field-meta.xml
<CustomField>
    <fullName>FEC_Pre_Payment_Penalty__c</fullName>
    <description>Phí thanh lý trước hạn</description>
    <label>Pre Payment Penalty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>