force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>FEC_Primary_Phone__c</fullName>
    <description>Số điện thoại chính</description>
    <label>Primary Phone</label>
    <type>Phone</type>
</CustomField>