force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Principal_Overdue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Principal_Overdue__c</fullName>
    <description>Nợ gốc quá hạn</description>
    <label>Principal Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>