force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Product_Association__c.field-meta.xml
<CustomField>
    <fullName>FEC_Product_Association__c</fullName>
    <description>Tổ chức phát hành thẻ</description>
    <formula>CASE(
    LEFT(FEC_Card_Number__c, 1),
    &quot;5&quot;, &quot;MasterCard&quot;,
    &quot;4&quot;, &quot;Visa&quot;,
    &quot;3&quot;, &quot;JCB&quot;,
    &quot;9&quot;, &quot;Napas&quot;,
    &quot;Not defined&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Association</label>
    <type>Text</type>
</CustomField>