force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Province_City__c.field-meta.xml
<CustomField>
    <fullName>FEC_Province_City__c</fullName>
    <label>Province/ City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>