force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Rate__c.field-meta.xml
<CustomField>
    <fullName>FEC_Rate__c</fullName>
    <description>Lãi suất</description>
    <label>Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>