force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Reason_1__c.field-meta.xml
<CustomField>
    <fullName>FEC_Reason_1__c</fullName>
    <description>Tình trạng khóa tài khoản 1</description>
    <label>Reason 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>