force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Reason_2__c.field-meta.xml
<CustomField>
    <fullName>FEC_Reason_2__c</fullName>
    <description>Tình trạng khóa tài khoản 2</description>
    <label>Reason 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>