force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_Reason__c</fullName>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>