force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Received_Date__c</fullName>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>