force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Remark__c.field-meta.xml
<CustomField>
    <fullName>FEC_Remark__c</fullName>
    <description>Ghi chú điểm thưởng</description>
    <label>Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>