force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Repayment_Collected_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Repayment_Collected_Amount__c</fullName>
    <description>Khoản tiền đã hạch toán trong phí hoàn trả quá hạn</description>
    <label>Collected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>