force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Responsible_Person__c.field-meta.xml
<CustomField>
    <fullName>FEC_Responsible_Person__c</fullName>
    <description>Người phụ trách</description>
    <label>Responsible Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>