force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Responsible_Unit__c.field-meta.xml
<CustomField>
    <fullName>FEC_Responsible_Unit__c</fullName>
    <description>Đơn vị phụ trách</description>
    <label>Responsible Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>