force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sales_Channel__c</fullName>
    <label>Sales Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>