force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Sales_Sub_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sales_Sub_Channel__c</fullName>
    <label>Sales Sub Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>