force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Scheme_Desc__c.field-meta.xml
<CustomField>
    <fullName>FEC_Scheme_Desc__c</fullName>
    <label>Scheme Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>