force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Scheme_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Scheme_ID__c</fullName>
    <description>Mã chương trình</description>
    <label>Scheme ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>