force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Search_Result_National_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Search_Result_National_ID__c</fullName>
    <description>National ID 1-2 trong kết quả màn search</description>
    <label>Search Result National ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>