force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Short_Name__c</fullName>
    <label>Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>