force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Sold_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sold_Date__c</fullName>
    <description>Ngày bán nợ</description>
    <label>Sold Date</label>
    <type>Date</type>
</CustomField>