force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Sold_Note__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sold_Note__c</fullName>
    <description>Loại bán nợ</description>
    <label>Sold Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>