force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Statement_Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Statement_Notification_Type__c</fullName>
    <description>Hình thức nhận sao kê</description>
    <label>Statement Notification Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>