force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Sub_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sub_Channel__c</fullName>
    <description>Kênh bán phụ</description>
    <label>Sub Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>