force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Tenure__c.field-meta.xml
<CustomField>
    <fullName>FEC_Tenure__c</fullName>
    <description>Kỳ hạn</description>
    <label>Tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>