force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Termination_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Termination_Amount__c</fullName>
    <description>Số tiền tất toán</description>
    <label>Termination Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>