force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Title__c.field-meta.xml
<CustomField>
    <fullName>FEC_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>