force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Top_Up_Loan_Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>FEC_Top_Up_Loan_Amount_Requested__c</fullName>
    <description>Khoản giải ngân HĐ mới</description>
    <label>Top Up Loan Amount Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>