force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Top_Up_Old_A_c_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>FEC_Top_Up_Old_A_c_Outstanding__c</fullName>
    <description>Số tiền thanh lý HĐ cũ</description>
    <label>Top Up Old A/c Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>