force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Top_Up_Old_Account_App_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Top_Up_Old_Account_App_ID__c</fullName>
    <description>Mã hồ sơ HĐ cũ</description>
    <label>Top Up Old A/c App ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>