force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Top_up_Xsell_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>FEC_Top_up_Xsell_Eligibility__c</fullName>
    <description>Điều kiện Top-up Xsell</description>
    <label>Top-up Xsell Eligibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>