force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Top_up_XSell_Max__c.field-meta.xml
<CustomField>
    <fullName>FEC_Top_up_XSell_Max__c</fullName>
    <description>Khoản Top-up Xsell tối đa</description>
    <label>Top-up XSell Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>