force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Total_Balance__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_Balance__c</fullName>
    <description>Tổng dư nợ hiện tại</description>
    <label>Total Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>