force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Total_Close_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_Close_Fee_Amount__c</fullName>
    <description>Tổng số tiền phí tất toán</description>
    <label>Total Close Fee Amount</label>
    <summarizedField>FEC_Card_Payment__c.FEC_Close_Fee_Amount__c</summarizedField>
    <summaryForeignKey>FEC_Card_Payment__c.FEC_Customer_History__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>