force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Total_Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_Current_Balance__c</fullName>
    <description>Tổng dư nợ hiện tại</description>
    <label>Total Current Balance</label>
    <summarizedField>FEC_Card_Payment__c.FEC_Current_Balance__c</summarizedField>
    <summaryForeignKey>FEC_Card_Payment__c.FEC_Customer_History__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>