force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Total_Deferred_Interest__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_Deferred_Interest__c</fullName>
    <description>Tổng lãi trì hoãn</description>
    <label>Total Deferred Interest</label>
    <summarizedField>FEC_Card_Payment__c.FEC_Deferred_Interest__c</summarizedField>
    <summaryForeignKey>FEC_Card_Payment__c.FEC_Customer_History__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>