force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Total_Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_Installment_Amount__c</fullName>
    <label>Total Installment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>