force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Total_Installment_Paid__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_Installment_Paid__c</fullName>
    <description>Tổng số tiền góp đã thanh toán</description>
    <label>Total Installment Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>