force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Total_Interest__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_Interest__c</fullName>
    <label>Total Interest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>