force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Total_IPP_Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_IPP_Current_Balance__c</fullName>
    <description>Tổng dư nợ gốc IPP hiện tại</description>
    <label>Total IPP Current Balance</label>
    <summarizedField>FEC_IPP__c.FEC_IPP_Current_Balance__c</summarizedField>
    <summaryForeignKey>FEC_IPP__c.FEC_Customer_History__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>