force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Total_Overdue_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_Overdue_Amount__c</fullName>
    <description>Tổng số tiền góp quá hạn đã thanh toán</description>
    <label>Total Overdue Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>