force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Total_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_Payment_Amount__c</fullName>
    <label>Total Payment Amount</label>
    <summarizedField>FEC_Payment_History__c.FEC_Payment_Amount__c</summarizedField>
    <summaryForeignKey>FEC_Payment_History__c.FEC_Customer_History__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>