force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Total_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_Payment_Due__c</fullName>
    <description>Tổng khoản thanh toán đến hạn</description>
    <label>Total Payment Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>