force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Total_Per_Diem__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_Per_Diem__c</fullName>
    <description>Tổng lãi một ngày</description>
    <label>Total Per Diem</label>
    <summarizedField>FEC_Card_Payment__c.FEC_Per_Diem__c</summarizedField>
    <summaryForeignKey>FEC_Card_Payment__c.FEC_Customer_History__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>