force-app/main/default/objects/FEC_Customer_History__c/fields/FEC_Total_Plan_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_Plan_Payment_Amount__c</fullName>
    <description>Tổng số tiền tất toán</description>
    <label>Total Plan Payment Amount</label>
    <summarizedField>FEC_Card_Payment__c.FEC_Plan_Payment_Amount__c</summarizedField>
    <summaryForeignKey>FEC_Card_Payment__c.FEC_Customer_History__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>